# Super-Mario-ISEN---Noah-Martin-Bastien-Elliott---2025

./: .gitignore  Affichage.c  CMakeLists.txt  Makefile  README.md  deplacement.c  fonction.h  main.c  sauvegardes.txt  save.txt
src/: fonction.c  fonction.h  main.c  map.c
src/core/: base.c  sdl.c  sons-sdl.c  textures-sdl.c
src/entities/: bloc-mystere.c  deplacement-ennemis.c  interaction-ennemis.c
src/graphics/: background-parallaxe.c  score-vies.c  tableau-score.c  transition-monde.c
src/utils/: bouton.c  menu.c  sauvegarde.c  transition-niveau.c
src/world/: affichage-map.c  map.c
